# Embot

./: .gitignore  AGENTS.md  Embot.py  README.md  _version.py  archive.py  artwork.py  bot.py  bot_token.py  bulk_transcribe.py  commands.py  community.py  config.py  dev.py  emarchive.py  embaldna.py  icons.py  import_history.py  levels.py  links.py  links_config.json  logger.py  magic_emball.py  main.py  member_management.py  migrate.py  mod_oversight.py  moderation.json  moderation.py  play.py  player.py  projects.py  pyproject.toml  requirements.txt  splash.py  spotlight_friday.py  starboard.py  starboard_config.json  start.bat  start.sh  (+8 more)
.claude/: memory.md  project.md  run-log.md  scratchpad.md
config/: archive_config.json  dev.json  embot.json  info_config.json  links_config.json  logger_config.json  moderation.json  remasters_config.json  starboard_config.json
icons/: desktop.ini  moderation.py
modules/: _audit_cache.py  _messages.py  _utils.py  archive.py  artwork.py  audit_cache.py  cache_audit.py  community.py  dev.py  helpdoc.py  icons.py  info.py  links.py  logger.py  magic_emball.py  messages.py  mod_actions.py  mod_appeals.py  mod_core.py  mod_logger.py  mod_notes.py  mod_oversight.py  mod_rules.py  mod_suspicion.py  modactions.py  modappeals.py  modcore.py  moderation.py  modoversight.py  modrules.py  modsuspicion.py  music_archive.py  music_browser.py  music_player.py  musicarchive.py  network.py  player.py  remasters.py  remote_debug.py  sb_migrate.py  (+9 more)
wip/: control.py
