[project]
name = "embot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "cryptography>=46.0.7",
    "discord-py[voice]>=2.7.1",
    "mutagen>=1.47.0",
    "numpy>=2.4.4",
    "openai-whisper>=20250625",
    "pillow>=12.2.0",
    "pydub>=0.25.1",
    "pynacl>=1.5.0",
    "pytz>=2026.1.post1",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
]
